--- a/pom.xml
+++ b/pom.xml
@@ -32,12 +32,13 @@
         <url>git@github.com:code4craft/xsoup.git</url>
       <tag>HEAD</tag>
   </scm>
-    <licenses>
-        <license>
-            <name>Apache License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
-        </license>
-    </licenses>
+   <licenses>
+    <license>
+        <name>The MIT License</name>
+        <url>http://jsoup.com/license</url>
+        <distribution>repo</distribution>
+    </license>  
+  </licenses>
 
         <dependencies>
             <dependency>
