--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     </parent>
     <groupId>us.codecraft</groupId>
     <artifactId>xsoup</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
     <properties>
@@ -16,7 +16,7 @@
     </properties>
     <name>xsoup</name>
     <description>
-        XPath selector for Jsoup.
+        HTML XPath selector based on Jsoup.
     </description>
     <url>https://github.com/code4craft/xsoup/</url>
     <developers>
