--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     </parent>
     <groupId>us.codecraft</groupId>
     <artifactId>xsoup</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
     <properties>
@@ -30,7 +30,7 @@
         <connection>scm:git:git@github.com:code4craft/xsoup.git</connection>
         <developerConnection>scm:git:git@github.com:code4craft/xsoup.git</developerConnection>
         <url>git@github.com:code4craft/xsoup.git</url>
-      <tag>HEAD</tag>
+      <tag>xsoup-0.1.0</tag>
   </scm>
    <licenses>
     <license>
