update ut to assertj

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
                 <artifactId>jsoup</artifactId>
                 <version>1.7.2</version>
             </dependency>
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>1.5.0</version>
+            </dependency>
         </dependencies>
 
     <build>
