--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,11 @@
                     <goals>deploy</goals>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.amashchenko.maven.plugin</groupId>
+                <artifactId>gitflow-maven-plugin</artifactId>
+                <version>1.15.0</version>
+            </plugin>
         </plugins>
     </build>
 
