--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <connection>scm:git:git@github.com:code4craft/xsoup.git</connection>
         <developerConnection>scm:git:git@github.com:code4craft/xsoup.git</developerConnection>
         <url>git@github.com:code4craft/xsoup.git</url>
-        <tag>xsoup-0.3.0</tag>
+        <tag>xsoup-${project.version}</tag>
     </scm>
     <licenses>
         <license>
